# Xphost-Tutorial.github.io

./: .gitignore  README.md  package.json  tsconfig.json  vite.config.js
.github/workflows/: build.yml
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/Svelte/: MyMessageBox.svelte
src/components/lit/: MyComponents.ts
src/routes/: +page.svelte
src/routes/saves/: +page.svelte  MyMenu.svelte
src/store/: dialog.yml  index.ts
src/styles/: index.css
src/utils/: backend-local.ts  backend-tauri.ts  index.ts
