[package]
name = "tutorial-visual-novel"
version = "0.1.0"
description = "A Very Good Visual Novel!!"
authors = ["xphost"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tutorial_visual_novel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_spanned = "=1.0.4"
uuid = "=1.20.0"
embed-resource = "=3.0.6"
tempfile = "=3.24.0"
async-lock = "=3.4.1"
deranged = "=0.5.5"
dlopen2 = "=0.8.0"
dlopen2_derive = "=0.4.1"
getrandom = "=0.3.4"
time = "=0.3.45"
wasip2 = "=1.0.1"
wasip3 = "=0.3.1"
wit-bindgen = "=0.49.0"
wit-bindgen-core = "=0.49.0"
wit-bindgen-rust = "=0.49.0"
zbus = "=5.12.0"
zvariant = "=5.8.0"
zvariant_derive = "=5.8.0"
zvariant_utils = "=3.2.1"
toml = "=1.0.7+spec-1.1.0"
toml_datetime = "=1.0.1+spec-1.1.0"
toml_edit = "=0.25.5+spec-1.1.0"
toml_parser = "=1.0.10+spec-1.1.0"
toml_writer = "=1.0.7+spec-1.1.0"
icu_collections = "=2.1.1"
icu_locale_core = "=2.1.1"
icu_normalizer = "=2.1.1"
icu_normalizer_data = "=2.1.1"
icu_properties = "=2.1.1"
icu_properties_data = "=2.1.1"
icu_provider = "=2.1.1"
unicode-segmentation = "=1.12.0"
async-signal = "=0.2.13"
hashbrown = "=0.16.1"
indexmap = "=2.13.1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
uds_windows = "=1.1.0"
